@@ -1,3 +1,10 @@
+2019-03-05  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* g++.target/riscv/call-with-empty-struct-float.C: New file.
+	* g++.target/riscv/call-with-empty-struct-int.C: New file.
+	* g++.target/riscv/call-with-empty-struct.H: New file.
+	* g++.target/riscv/riscv.exp: New file.
+
 2019-03-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/71446
